fix: 🐛 pokemon filter moves display & light theme contrast

--- a/src/components/poke-moves/index.scss
+++ b/src/components/poke-moves/index.scss
@@ -7,9 +7,10 @@ $input-size: 42px;
 
   &__header {
     min-height: 42px;
-    display: flex;
+    display: grid;
     align-items: center;
-    justify-content: space-between;
+    grid-template-columns: 1fr 2fr auto;
+    gap: 8px;
 
     > span {
       font-size: 18px;
@@ -20,6 +21,11 @@ $input-size: 42px;
       display: flex;
       align-items: center;
       gap: 8px;
+      align-self: flex-end;
+    }
+
+    .total-items {
+      align-items: center;
     }
   }
 
