--- a/src/components/shared/light-theme.scss
+++ b/src/components/shared/light-theme.scss
@@ -1,8 +1,8 @@
 html[data-theme="light"] {
   --primary-color: #fff;
   --rgb-primary-color: 255, 255, 255;
-  --secondary-color: #eeeff4;
-  --third-color: #f4f5f6;
+  --secondary-color: #f5f7fd;
+  --third-color: #eef3f7;
   --font-color: rgb(48, 48, 48);
   --focus-border-color: rgb(220, 220, 220);
 }
